--- a/noteswap/notes/templates/notes/base.html
+++ b/noteswap/notes/templates/notes/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,8 +6,10 @@
     <title>NoteSwap</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Bootstrap 5 CDN -->
+    <link rel="stylesheet" href="{% static 'profile.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body class="bg-light">
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-4">
@@ -15,6 +18,7 @@
         <div class="ms-auto">
         {% if user.is_authenticated %}
             <span class="me-2 text-white">Bonjour, {{ user.username }}</span>
+            <a href="{% url 'profile' %}" class="btn btn-outline-light btn-sm me-2">Mon Profil</a>
             <a href="{% url 'logout' %}" class="btn btn-outline-light btn-sm">Déconnexion</a>
         {% else %}
             <a href="{% url 'login' %}" class="btn btn-outline-light btn-sm me-2">Connexion</a>
